@@ -15,6 +15,7 @@ Added DSK disk info menu: to get tracks and sectors of a disk
 Added ZRCP command: "close-all-menus"
 Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)
 Added XEyes "Toy" to follow mouse
+Added more Hotswap combinations
 
 * Improvements:
 
